# server

./: CMakeLists.txt  README.md  main.cpp
src/: ConnectionInfo.h  DatabaseManager.cpp  DatabaseManager.h  MainWindow.cpp  MainWindow.h  TCPServer.cpp  TCPServer.h
